first batch of questions have been added and i fix issue when answer option was too long for the standard width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,8 @@ li.btn {
     display: list-item;
     text-align: left;
     margin-bottom: .8rem;
-    width: 33%;
+    min-width: 33%;
+    max-width: fit-content;
 }
 
 .btn {
